# IPA-RS-HeteroNetwork

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
charts/ipars/: Chart.yaml  values.yaml
charts/ipars/templates/: _helpers.tpl  daemonset.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
clients/macos/: README.md  project.yml
clients/macos/Config/: App.entitlements  PacketTunnel.entitlements
clients/macos/Sources/App/: AppModel.swift  HeteroNetworkApp.swift  MenuBarContent.swift  SettingsView.swift  TunnelManager.swift
clients/macos/Sources/Core/: ClientIdentity.swift  ClientSessionStore.swift  Coding.swift  Constants.swift  ControlPlaneClient.swift  Enrollment.swift  Models.swift  OverlayDNSHealthProbe.swift  OverlayHealthResponse.swift  TunnelProfile.swift
clients/macos/Sources/PacketTunnel/: PacketTunnelProvider.swift
clients/macos/Tests/CoreTests/: ClientSignatureTests.swift  ControlPlaneClientTests.swift  EnrollmentTests.swift  OverlayDNSHealthProbeTests.swift  OverlayHealthResponseTests.swift  TunnelProfileTests.swift
clients/macos/patches/: wireguardkit-split-dns.patch
clients/macos/scripts/: bootstrap.sh
clients/windows/: HeteroNetwork.Windows.slnx  README.md  bootstrap-wireguard.ps1  build.ps1
clients/windows/src/HeteroNetwork.App/: App.xaml  App.xaml.cs  HeteroNetwork.App.csproj  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
clients/windows/src/HeteroNetwork.Core/: ClientKeyMaterial.cs  ClientSessionStore.cs  ControlPlaneClient.cs  EmbeddedTunnelService.cs  EmbeddedWireGuardRuntime.cs  EnrollmentParser.cs  HeteroNetwork.Core.csproj  HeteroNetworkJson.cs  Models.cs  TunnelProfile.cs  WindowsTunnelManager.cs
clients/windows/tests/HeteroNetwork.Core.Tests/: ClientProtocolTests.cs  HeteroNetwork.Core.Tests.csproj  TestData.cs  TunnelProfileTests.cs
console/: README.md  index.html
crates/ipars-agent/: Cargo.toml
crates/ipars-agent-http/: Cargo.toml
crates/ipars-agent-http/src/: lib.rs
crates/ipars-agent/src/: boringtun_backend.rs  lib.rs  peer_probe.rs
crates/ipars-agent/tests/: netns_hole_punch.rs  netns_peer_probe.rs  netns_relay_fallback.rs  netns_wireguard_backend.rs
crates/ipars-cli/: Cargo.toml
crates/ipars-cli/src/: main.rs
crates/ipars-cli/tests/: docker_compose_smoke.rs
crates/ipars-control-plane/: Cargo.toml
crates/ipars-control-plane-http/: Cargo.toml
crates/ipars-control-plane-http/src/: lib.rs
crates/ipars-control-plane/src/: lib.rs
crates/ipars-crypto/: Cargo.toml
crates/ipars-crypto/src/: lib.rs
crates/ipars-daemon/: Cargo.toml
crates/ipars-daemon/src/: main.rs
crates/ipars-load/: Cargo.toml
crates/ipars-load/src/: main.rs
crates/ipars-relay/: Cargo.toml
crates/ipars-relay-http/: Cargo.toml
crates/ipars-relay-http/src/: lib.rs
crates/ipars-relay/src/: lib.rs
crates/ipars-route-manager/: Cargo.toml
crates/ipars-route-manager/src/: lib.rs
crates/ipars-route-manager/tests/: netns_route_backend.rs
crates/ipars-signal/: Cargo.toml
crates/ipars-signal-http/: Cargo.toml
crates/ipars-signal-http/src/: lib.rs
crates/ipars-signal/src/: lib.rs
crates/ipars-store/: Cargo.toml
crates/ipars-store/src/: lib.rs
crates/ipars-stun/: Cargo.toml
crates/ipars-stun/src/: lib.rs
crates/ipars-types/: Cargo.toml
crates/ipars-types/src/: ebpf.rs  lib.rs
deploy/systemd/: README.md  ipars-control-plane.service  ipars-public-node.target  ipars-relay.service  ipars-signal.service  ipars-stun.service  public-node.env.example
docker/: Dockerfile  compose.dataplane-smoke.yaml  compose.docker-discovery.yaml  compose.docker-remote-ca.yaml  compose.rootless-dataplane.yaml  compose.rootless-discovery-e2e.yaml  compose.rootless-docker-discovery.yaml  compose.rootless-e2e.yaml  compose.rootless-route-provider-e2e.yaml  compose.rootless-route-provider.yaml  compose.rootless.yaml  compose.yaml
docs/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  KUBERNETES_HA_UNDERLAY.md  LOAD_TEST_PLAN.md  OPERATIONS.md  POSTGRES_HA.md  SECURITY.md
ebpf/ipars-packet-flow/: Cargo.toml  README.md
ebpf/ipars-packet-flow/src/: main.rs
scripts/: agent-nat-smoke.sh  build-ebpf.sh  docker-multi-engine-smoke.sh  docker-smoke.sh  github-app-manifest-server.py  helm-smoke.sh  init-spawn-smoke.sh  k8s-live-smoke.sh  keycloak-github-idp.sh  keycloak-ha-node.sh  kind-k8s-smoke.sh  kubeadm-ha-autopilot.sh  kubeadm-ha-node.sh  load-smoke.sh  nat-discovery-smoke.sh  netns-smoke.sh  postgres-ha-autopilot.sh  postgres-ha-node.sh  rootless-compose-attach.sh  rootless-docker-smoke.sh
webconsole/: README.md  server.mjs
webui/: FONTS.md  app.js  index.html  styles.css  theme.js
