[workspace]
resolver = "2"
members = [
    "crates/ipars-agent",
    "crates/ipars-agent-http",
    "crates/ipars-cli",
    "crates/ipars-control-plane",
    "crates/ipars-control-plane-http",
    "crates/ipars-crypto",
    "crates/ipars-daemon",
    "crates/ipars-relay",
    "crates/ipars-relay-http",
    "crates/ipars-route-manager",
    "crates/ipars-signal",
    "crates/ipars-signal-http",
    "crates/ipars-store",
    "crates/ipars-stun",
    "crates/ipars-types",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/IPA-CyberLab/IPA-RS-HeteroNetwork"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
ipnet = { version = "2.10", features = ["serde"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio", "sqlite", "tls-rustls"] }
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = "0.5"
tracing = "0.1"
uuid = { version = "1.10", features = ["serde", "v4"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
