[workspace]
resolver = "2"
members = [
    "crates/ipars-agent",
    "crates/ipars-agent-http",
    "crates/ipars-cli",
    "crates/ipars-control-plane",
    "crates/ipars-control-plane-http",
    "crates/ipars-crypto",
    "crates/ipars-daemon",
    "crates/ipars-load",
    "crates/ipars-relay",
    "crates/ipars-relay-http",
    "crates/ipars-route-manager",
    "crates/ipars-signal",
    "crates/ipars-signal-http",
    "crates/ipars-store",
    "crates/ipars-stun",
    "crates/ipars-types",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/IPA-CyberLab/IPA-RS-HeteroNetwork"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
aya = { version = "0.13.1", default-features = false }
axum = "0.8"
base64 = "0.22"
bytes = "1.12"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures-util = "0.3"
genetlink = "0.2.6"
hex = "0.4"
ipnet = { version = "2.10", features = ["serde"] }
netlink-packet-core = "0.8"
netlink-packet-generic = "0.4"
netlink-packet-wireguard = "0.4"
netlink-sys = "0.8"
nix = { version = "0.30", default-features = false, features = ["fs", "sched"] }
opentelemetry = { version = "0.32", features = ["logs", "metrics", "trace"] }
opentelemetry-appender-tracing = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["http-proto", "logs", "metrics", "reqwest-blocking-client", "trace"] }
opentelemetry_sdk = { version = "0.32", features = ["logs", "metrics", "rt-tokio", "trace"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rtnetlink = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio", "sqlite", "tls-rustls"] }
thiserror = "1.0"
tokio = { version = "1.39", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower = "0.5"
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
