[package]
name = "ipars-agent-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
ipars-agent = { path = "../ipars-agent" }
ipars-types = { path = "../ipars-types" }
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
