[package]
name = "ipars-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
ipars-crypto = { path = "../ipars-crypto" }
ipars-route-manager = { path = "../ipars-route-manager" }
ipars-stun = { path = "../ipars-stun" }
ipars-types = { path = "../ipars-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
