[package]
name = "ipars-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
boringtun.workspace = true
chrono.workspace = true
futures-util.workspace = true
genetlink.workspace = true
hex.workspace = true
ipnet.workspace = true
ipars-crypto = { path = "../ipars-crypto" }
ipars-relay = { path = "../ipars-relay" }
ipars-route-manager = { path = "../ipars-route-manager" }
ipars-stun = { path = "../ipars-stun" }
ipars-types = { path = "../ipars-types" }
netlink-packet-core.workspace = true
netlink-packet-generic.workspace = true
netlink-packet-wireguard.workspace = true
nix.workspace = true
rtnetlink.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true

[dev-dependencies]
ipars-signal = { path = "../ipars-signal" }
