[package]
name = "ipars-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ipars"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
ipars-crypto = { path = "../ipars-crypto" }
ipars-types = { path = "../ipars-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
