[package]
name = "ipars-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ipars"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
ipars-agent = { path = "../ipars-agent" }
ipars-crypto = { path = "../ipars-crypto" }
ipars-relay = { path = "../ipars-relay" }
ipars-stun = { path = "../ipars-stun" }
ipars-types = { path = "../ipars-types" }
ipnet.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
ipars-route-manager = { path = "../ipars-route-manager" }

[lints]
workspace = true
