[package]
name = "ipars-control-plane-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
ipars-control-plane = { path = "../ipars-control-plane" }
ipars-types = { path = "../ipars-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
ipars-crypto = { path = "../ipars-crypto" }
ipnet.workspace = true
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
