[package]
name = "ipars-control-plane-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
ipars-control-plane = { path = "../ipars-control-plane" }
ipars-crypto = { path = "../ipars-crypto" }
ipars-types = { path = "../ipars-types" }
ipnet.workspace = true
reqwest.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-util.workspace = true
url.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
