[package]
name = "ipars-control-plane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
ipnet.workspace = true
ipars-types = { path = "../ipars-types" }
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
