[package]
name = "ipars-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
ipars-types = { path = "../ipars-types" }
rand_core.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true

[lints]
workspace = true
