[package]
name = "ipars-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "iparsd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
ipnet.workspace = true
ipars-agent = { path = "../ipars-agent" }
ipars-agent-http = { path = "../ipars-agent-http" }
ipars-control-plane = { path = "../ipars-control-plane" }
ipars-control-plane-http = { path = "../ipars-control-plane-http" }
ipars-relay = { path = "../ipars-relay" }
ipars-relay-http = { path = "../ipars-relay-http" }
ipars-route-manager = { path = "../ipars-route-manager" }
ipars-signal = { path = "../ipars-signal" }
ipars-signal-http = { path = "../ipars-signal-http" }
ipars-store = { path = "../ipars-store" }
ipars-stun = { path = "../ipars-stun" }
ipars-types = { path = "../ipars-types" }
netlink-sys.workspace = true
nix.workspace = true
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
