[package]
name = "ipars-load"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ipars-load"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
ipnet.workspace = true
ipars-control-plane = { path = "../ipars-control-plane" }
ipars-signal = { path = "../ipars-signal" }
ipars-types = { path = "../ipars-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
