[package]
name = "ipars-load"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ipars-load"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
ipnet.workspace = true
ipars-control-plane = { path = "../ipars-control-plane" }
ipars-control-plane-http = { path = "../ipars-control-plane-http" }
ipars-crypto = { path = "../ipars-crypto" }
ipars-relay = { path = "../ipars-relay" }
ipars-relay-http = { path = "../ipars-relay-http" }
ipars-signal = { path = "../ipars-signal" }
ipars-signal-http = { path = "../ipars-signal-http" }
ipars-types = { path = "../ipars-types" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
