[package]
name = "ipars-relay-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
ipars-relay = { path = "../ipars-relay" }
ipars-types = { path = "../ipars-types" }
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
