[package]
name = "ipars-relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
ipars-types = { path = "../ipars-types" }
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
