[package]
name = "ipars-route-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
ipnet.workspace = true
ipars-types = { path = "../ipars-types" }
rtnetlink.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
