[package]
name = "ipars-signal-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
ipars-signal = { path = "../ipars-signal" }
ipars-types = { path = "../ipars-types" }
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
chrono.workspace = true
serde_json.workspace = true
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
