[package]
name = "ipars-signal-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
ipars-crypto = { path = "../ipars-crypto" }
ipars-signal = { path = "../ipars-signal" }
ipars-types = { path = "../ipars-types" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
