[package]
name = "ipars-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
ipars-control-plane = { path = "../ipars-control-plane" }
ipars-types = { path = "../ipars-types" }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
ipnet.workspace = true
tokio.workspace = true

[lints]
workspace = true
