[package]
name = "ipars-stun"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
ipars-types = { path = "../ipars-types" }
rand_core.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
